2003-06-07  Chris Zubrzycki  <beren12@sheep.berlios.de>

        * added automake files for plugin creation.
        * TODO: add manpage and more docs
        * moved sources to src/

03/05/18
--------

- Fixed the endianess issues, the plugin should now work fine on big-endian


03/05/09
--------

- Fixed download status reporting
- Improved Makefile (thank you Justin)

03/05/07
--------

- Fix source search bug

03/05/05
--------

- Fixed serious file corruption bug


03/05/04
--------

- Removed removal of unavailable sources until proper interface is implemented
- Adapted to changes in giFT's hashing interface
- Added IP address to user names


03/05/01
--------

Initial Release
