@@ -1,1 +1,3 @@
+ $Id: AUTHORS,v 1.4 2003/06/20 18:57:30 beren12 Exp $
+
 see README
