@@ -1,3 +1,5 @@
+# $Id: Makefile.am,v 1.2 2003/06/20 18:57:30 beren12 Exp $
+
 SUBDIRS = src
 
 #EXTRA_DIST=gift_fasttrack.lsm.in gift_fasttrack.spec.in gift_fasttrack.texinfo
