@@ -1,5 +1,4 @@
-
-Last update: 03/06/10
+ $Id: README,v 1.7 2003/06/20 18:57:30 beren12 Exp $
 ---------------------
 
 This is a FastTrack plugin for giFT (www.giftproject.org)
