@@ -1,3 +1,4 @@
+ $Id: README.win32,v 1.2 2003/06/20 18:57:30 beren12 Exp $
 
 03/05/09
 --------
