@@ -1,5 +1,7 @@
 # -*- sh -*-
 
+# $Id: configure.ac,v 1.6 2003/06/20 18:57:30 beren12 Exp $
+
 dnl ###########################################################################
 dnl Process this file with autoconf to produce a configure script.
 dnl ###########################################################################
