@@ -13,7 +13,7 @@
 .\" along with this program; see the file COPYING.  If not, write to
 .\" the Free Software Foundation, 675 Mass Ave, Cambridge, MA 02139, USA.
 .\"
-.TH GIFT_FASTTRACK 1 "June 4, 2003"
+.TH GIFT_FASTTRACK 1 "$Id: gift_fasttrack.1,v 1.2 2003/06/20 18:57:30 beren12 Exp $"
 .\" Please update the above date whenever this man page is modified.
 .\"
 .\" Some roff macros, for reference:
