@@ -1,4 +1,5 @@
 /*
+ * $Id: md5.h,v 1.2 2003/06/20 18:57:30 beren12 Exp $
  * This code implements the MD5 message-digest algorithm.
  * The algorithm is due to Ron Rivest.  This code was
  * written by Colin Plumb in 1993, no copyright is claimed.
