@@ -1,0 +1,2 @@
+ $Id: NEWS,v 1.2 2003/06/20 18:57:30 beren12 Exp $
+
