@@ -1,3 +1,5 @@
+ $Id: ChangeLog,v 1.2 2003/06/20 18:57:30 beren12 Exp $
+
 2003-06-07  Chris Zubrzycki  <beren12@sheep.berlios.de>
 
         * added automake files for plugin creation.
